double scroll fixed

--- a/frontend/src/Pages/postBoardPage/PostBoardPage.css
+++ b/frontend/src/Pages/postBoardPage/PostBoardPage.css
@@ -55,12 +55,6 @@
   color: var(--custom-white);
 }
 
-.item-container {
-  overflow-y: auto;
-  max-height: 100vh;
-  margin-top: 100px;
-}
-
 .sold-tag {
   background-color: "white";
   color: "red";
